// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> should render correctly Tooltip 1`] = `
<div
  className="drop-down drop-down--bottom-center drop-down--hoverable"
>
  ExampleText
</div>
`;

exports[`<Tooltip /> should render correctly Tooltip with attr hoverable 1`] = `
<div
  className="drop-down drop-down--bottom-center drop-down--hoverable"
>
  ExampleText
</div>
`;

exports[`<Tooltip /> should render correctly Tooltip with attr hoverable 2`] = `
<div
  className="drop-down drop-down--bottom-center"
>
  ExampleText
</div>
`;

exports[`<Tooltip /> should render correctly Tooltip with attr show 1`] = `
<div
  className="drop-down drop-down--bottom-center drop-down--hoverable drop-down--show"
>
  ExampleText
</div>
`;

exports[`<Tooltip /> should render correctly Tooltip with attr show 2`] = `
<div
  className="drop-down drop-down--bottom-center drop-down--hoverable"
>
  ExampleText
</div>
`;

exports[`<Tooltip /> should render correctly Tooltip with positionVertical=bottom and one any positionHorizontal 1`] = `
<div
  className="drop-down drop-down--bottom-left drop-down--hoverable"
>
  ExampleText
</div>
`;

exports[`<Tooltip /> should render correctly Tooltip with positionVertical=bottom and one any positionHorizontal 2`] = `
<div
  className="drop-down drop-down--bottom-center drop-down--hoverable"
>
  ExampleText
</div>
`;

exports[`<Tooltip /> should render correctly Tooltip with positionVertical=bottom and one any positionHorizontal 3`] = `
<div
  className="drop-down drop-down--bottom-right drop-down--hoverable"
>
  ExampleText
</div>
`;

exports[`<Tooltip /> should render correctly Tooltip with positionVertical=top and one any positionHorizontal 1`] = `
<div
  className="drop-down drop-down--top-left drop-down--hoverable"
>
  ExampleText
</div>
`;

exports[`<Tooltip /> should render correctly Tooltip with positionVertical=top and one any positionHorizontal 2`] = `
<div
  className="drop-down drop-down--top-center drop-down--hoverable"
>
  ExampleText
</div>
`;

exports[`<Tooltip /> should render correctly Tooltip with positionVertical=top and one any positionHorizontal 3`] = `
<div
  className="drop-down drop-down--top-right drop-down--hoverable"
>
  ExampleText
</div>
`;
